--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Une API REST pour gérer l'ensemble des opérations d'une école, y compris les étudiants, les enseignants, les cours et les notes.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
